# LearnOpenGL

project1/: CMakeLists.txt
project1/src/: Shader.cpp  Shader.h  main.cpp
project2/: CMakeLists.txt  main.cpp
project2/include/: Shader.h
project2/src/: Shader.cpp  main.cpp
project3/: CMakeLists.txt
project3/src/: main.cpp
